--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "3.1.5",
-    "primevue": "^3.8.2",
-    "primeicons": "^4.1.0"
+    "vue": "3.0.5",
+    "primevue": "3.5.1",
+    "primeicons": "4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.0.4",
-    "@vue/compiler-sfc": "3.1.5",
-    "vite": "^2.0.0-beta.12"
+    "@vitejs/plugin-vue": "1.0.6",
+    "@vue/compiler-sfc": "3.0.5",
+    "vite": "2.0.0-beta.30",
+    "sass": "1.34.0"
   }
 }
+
